RTW - dashboard css - this commit fixes the spacing of the month/year dates

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -17,7 +17,7 @@
     font-size: 2.4rem;
     letter-spacing: 1.4px;
     /* color: #b9b9b9; */
-    margin-bottom: .9rem;
+    /* margin-bottom: .9rem; */
     font-weight: 500 !important;
 }
 
